samples/_failures_safe/1761619227_d2db4a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1384acd9.c: In function ‘main’:
./samples/SAFE/__tmp_1384acd9.c:161:5: error: expected declaration or statement at end of input
  161 |     if (len > 0 && input[len - 1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_1384acd9.c:161:5: error: expected declaration or statement at end of input
